# RunStatistics

./: .gitignore  CMakeLists.txt  ReadMe.txt  boosttests.runsettings
lib/boost_1_63_0/lib64-msvc-14.0/: boost_filesystem-vc140-mt-1_63.lib  boost_filesystem-vc140-mt-gd-1_63.lib  boost_program_options-vc140-mt-1_63.lib  boost_program_options-vc140-mt-gd-1_63.lib  boost_unit_test_framework-vc140-mt-1_63.lib  boost_unit_test_framework-vc140-mt-gd-1_63.lib
source/: CMakeLists.txt  RunStatistics.cpp
source/StatisticsGenerator/: CMakeLists.txt  Config.h  PTreeReaderImpl.hpp  Statistics.cpp  Statistics.h  StatisticsReader.h  StatisticsReader.hpp  TreeReader.h
source/StatisticsGenerator/tests/: RunStatsTests.cpp  StatsGeneratorTests.cpp  StatsReaderTests.cpp
